; ModuleID = '/home/carl/AnghaBench/redis/deps/jemalloc/test/unit/extr_rtree.c_rtree_node_alloc_intercept.c'
source_filename = "/home/carl/AnghaBench/redis/deps/jemalloc/test/unit/extr_rtree.c_rtree_node_alloc_intercept.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i32 }

@test_rtree = common dso_local global %struct.TYPE_5__ zeroinitializer, align 4
@.str = private unnamed_addr constant [28 x i8] c"Unexpected calloc() failure\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i32*, %struct.TYPE_5__*, i64)* @rtree_node_alloc_intercept to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @rtree_node_alloc_intercept(i32* %0, %struct.TYPE_5__* %1, i64 %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca %struct.TYPE_5__*, align 8
  %7 = alloca i64, align 8
  %8 = alloca i32*, align 8
  store i32* %0, i32** %5, align 8
  store %struct.TYPE_5__* %1, %struct.TYPE_5__** %6, align 8
  store i64 %2, i64* %7, align 8
  %9 = load %struct.TYPE_5__*, %struct.TYPE_5__** %6, align 8
  %10 = icmp ne %struct.TYPE_5__* %9, @test_rtree
  br i1 %10, label %11, label %16

11:                                               ; preds = %3
  %12 = load i32*, i32** %5, align 8
  %13 = load %struct.TYPE_5__*, %struct.TYPE_5__** %6, align 8
  %14 = load i64, i64* %7, align 8
  %15 = call i32* @rtree_node_alloc_orig(i32* %12, %struct.TYPE_5__* %13, i64 %14)
  store i32* %15, i32** %4, align 8
  br label %31

16:                                               ; preds = %3
  %17 = load i32*, i32** %5, align 8
  %18 = load %struct.TYPE_5__*, %struct.TYPE_5__** %6, align 8
  %19 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %18, i32 0, i32 0
  %20 = call i32 @malloc_mutex_unlock(i32* %17, i32* %19)
  %21 = load i64, i64* %7, align 8
  %22 = call i64 @calloc(i64 %21, i32 4)
  %23 = inttoptr i64 %22 to i32*
  store i32* %23, i32** %8, align 8
  %24 = load i32*, i32** %8, align 8
  %25 = call i32 @assert_ptr_not_null(i32* %24, i8* getelementptr inbounds ([28 x i8], [28 x i8]* @.str, i64 0, i64 0))
  %26 = load i32*, i32** %5, align 8
  %27 = load %struct.TYPE_5__*, %struct.TYPE_5__** %6, align 8
  %28 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %27, i32 0, i32 0
  %29 = call i32 @malloc_mutex_lock(i32* %26, i32* %28)
  %30 = load i32*, i32** %8, align 8
  store i32* %30, i32** %4, align 8
  br label %31

31:                                               ; preds = %16, %11
  %32 = load i32*, i32** %4, align 8
  ret i32* %32
}

declare dso_local i32* @rtree_node_alloc_orig(i32*, %struct.TYPE_5__*, i64) #1

declare dso_local i32 @malloc_mutex_unlock(i32*, i32*) #1

declare dso_local i64 @calloc(i64, i32) #1

declare dso_local i32 @assert_ptr_not_null(i32*, i8*) #1

declare dso_local i32 @malloc_mutex_lock(i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
